--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+body {
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    background-color: rgb(218, 223, 228);
+}
+
 .grid {
     position: absolute;
-    width: 560px; 
-    height: 300px; 
-    border: 1px solid black; 
-    margin-top: 100px;
+    width: 760px; 
+    height: 500px; 
+    border: 2px solid black; 
+    margin-top: 120px;
 }
 
 .block {
@@ -26,4 +31,21 @@
     height: 20px;
     border-radius: 10px;
     background-color: red;
+}
+
+.game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    justify-content: space-between;
+}
+
+.btn {
+    margin-top: 10px;
+    font-size: 18px;
+    border-radius: 15px;
+    padding: 10px;
+    background-color: rgba(151, 15, 182, 0.837);
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
 }
